# dec86

./: .gitmodules  1f44.com  4093.txt  AGENTS.md  GLOBAL_PLAN.md  PLAN.md  README.md  asm2vex.py  compare.py  decompile.py  decompile32.py  exit.c  findings.md  main.py  newmain.py  oldmain.py  omf_pat.py  oom_monitor.sh  pyproject.toml  reprmixin.py  requirements.txt  run.sh  snake.asm  snake_.c  t.txt  test_decompile.py  x86_16_improvement_guide.md
.github/workflows/: ci-x86-16.yml
backups/venv_angr_stack_2026-03-20/: README.md  patched_files_manifest.json
cod/: BIOSFUNC.COD  DOSFUNC.COD  EGAME0.COD  EGAME1.COD  EGAME11.COD  EGAME12.COD  EGAME13.COD  EGAME2.COD  EGAME3.COD  EGAME4.COD  F15.COD  OUTPUT.COD  OVERLAY.COD  START0.COD  START1.COD  START3.COD  UTIL.COD  eg_new.cod  eg_old.cod
cod/deep/: output_Gs_Oa_Oi_Ol_On_Op_Or_Os.COD  output_Gs_Oa_Oi_Or_Ot_Zi.COD  output_Gs_Oa_Ol_On_Os_Zi.COD  output_Gs_Oa_Ol_Op_Or.COD  output_Gs_Oi_Ol_On_Op_Or.COD  output_Gs_Oi_Ol_Op_Or_Zi.COD  output_Gs_Or.COD  (+119 more)
examples/: BENCHFN.ASM  BENCHFN.C~  BENCHFN.MAP  BENCHLNG.ASM  BENCHLNG.C~  BENCHLNG.MAP  BENCHMUL.ASM  BENCHMUL.C~  BENCHMUL.MAP  BENCHSHO.ASM  BENCHSHO.C~  BENCHSHO.MAP  BYTEOPS.ASM  BYTEOPS.C~  BYTEOPS.MAP  DHAMP.ASM  DHAMP.C~  DHAMP.MAP  FIBO.ASM  FIBO.C~  FIBO.MAP  INTOPS.ASM  INTOPS.C~  INTOPS.MAP  LONGOPS.ASM  LONGOPS.C~  LONGOPS.MAP  MATRIXMU.ASM  MATRIXMU.C~  MATRIXMU.MAP  MAX.ASM  MAX.C~  MAX.MAP  STRLEN.ASM  STRLEN.C~  STRLEN.MAP  TESTLONG.ASM  TESTLONG.C~  TESTLONG.MAP  build.bat  (+4 more)
meta_harness/: README.md  __init__.py  cli.py  config.py  llm.py  orchestrator.py  prompts.py
reports/: x16_decompile_report.json  x16_decompile_report.txt
scripts/: decompile_cod_dir.py  probe_x16_retry_timeoutext.py  probe_x16_samples.py
tests/: BENCHFN.COM  BENCHLNG.COM  BENCHMUL.COM  BENCHSHO.COM  BYTEOPS.COM  DHAMP.COM  FIBO.COM  INTOPS.COM  LONGOPS.COM  MATRIXMU.COM  MAX.COM  STRLEN.COM  TESTLONG.COM  build.bat
(+46 files in other folders)
